# voter-mono

./: .gitignore  Cargo.toml
.fleet/: run.json
client/: Cargo.toml  lib.rs
client/src/: main.rs
client/src/data/: admin.rs  auth.rs  register.rs  user.rs  vote.rs
client/src/http/: admin.rs  common.rs  user.rs
curl/: delete.key.sh  getkeys.sh  insertkey.sh  register.sh
recordkeeper/: Cargo.toml
voteengine/: Cargo.toml
voteengine/src/: lib.rs  main.rs
voteengine/src/data/: auth.rs  ballot.rs  db.rs  users.rs
voteengine/src/http/: common.rs  dev.rs  user.rs  vote.rs
