[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.11.15", features = ["native-tls", "json"] }
serde = "1.0.158"
serde_json = "1.0.94"
tokio = { version = "1.28.0", features = ["full"] }
